--- a/.gitignore
+++ b/.gitignore
@@ -37,25 +37,19 @@ build/
 develop-eggs/
 dist/
 downloads/
-<<<<<<< HEAD
-
-=======
->>>>>>> 5a37e3d2085b1e5b47823aad6ae6dafc23825dd4
 eggs/
 .eggs/
 lib/
 lib64/
 parts/
-<<<<<<< HEAD
-
-=======
->>>>>>> 5a37e3d2085b1e5b47823aad6ae6dafc23825dd4
+HEAD
+5a37e3d2085b1e5b47823aad6ae6dafc23825dd4
 sdist/
 var/
 wheels/
 share/python-wheels/
 *.egg-info/
-<<<<<<< HEAD
+HEAD
 
 .installed.cfg
 *.egg
@@ -103,7 +97,6 @@ instance/
 # Scrapy
 .scrapy
 # Sphinx
-=======
 .installed.cfg
 *.egg
 MANIFEST
@@ -157,17 +150,15 @@ docs/_build/
 # PyBuilder
 .pybuilder/
 target/
-<<<<<<< HEAD
-=======
 
->>>>>>> 5a37e3d2085b1e5b47823aad6ae6dafc23825dd4
+5a37e3d2085b1e5b47823aad6ae6dafc23825dd4
 # Jupyter Notebook
 .ipynb_checkpoints
 
 # IPython
 profile_default/
 ipython_config.py
-<<<<<<< HEAD
+HEAD
 # pyenv
 #.python-version
 
@@ -345,4 +336,4 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
->>>>>>> 5a37e3d2085b1e5b47823aad6ae6dafc23825dd4
+5a37e3d2085b1e5b47823aad6ae6dafc23825dd4
